GameModelTest updated